--- a/style.css
+++ b/style.css
@@ -1,71 +1,46 @@
 body{
-    margin: 0;
-    padding: 0;
-    background: #34495e;
-}
-.slidershow{
-    width: 700px;
-    height: 400px;
-    overflow: hidden;
-}
-.middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.navigation{
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
+   margin: 0;
+   padding: 0;
+   height: 100%;
+   background: #343a40;
 }
 
-.bar{
-    width: 50px;
-    height: 10px;
-    border: 2px solid #fff;
-    margin: 6px;
-    cursor: pointer;
-    transition: 0.4s;
-}
 
-.bar:hover{
-    background: #fff;
-}
-
-input[name="r"]{
-    position: absolute;
-    visibility: hidden;
-}
-
-.slides{
-    width: 500%;
-    height: 100%;
-    display: flex;
-}
-
-.slide{
-
-    width: 20%;
-    transition: 0.6s;
-
-}
-
-.slide img{
-    width: 100%;
-    height: 100%;
-}
-
-#r1:checked ~ .s1{
-    margin-left: 0;
-}
-
-#r2:checked ~ .s1{
-    margin-left: -20%;
-}
-
-#r3:checked ~ .s1{
-    margin-left: -40%;
+#slider.item{
+    height :400px;
+    
+  }
+#slide1{
+    background-image: url(th2.jpg) ;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: red;
+    border-color: #343a40;
+  }
+#slide2{
+    background-image: url(the.jpg) ;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    border-color: #343a40;
+  }
+#slide3{
+    background-image: url(th3.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    border-color: #343a40;
+    
+  }
+ol.carousel-indicators{
+  list-style-type: none;
 }
