--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body{ 
-    height:100%;}
+  margin: 0;
+  padding: 0;
+    height: 100%;
+    width: 100%;
+    }
   /*.carousel,.item,.active{ 
     height:100%;}*/
   .carousel-inner{
-    height:100%;}
+    width: 100%;
+    height: 100%;}
   .carousel-item {
       height: 100vh;
       min-height: 350px;
@@ -19,7 +24,11 @@ body{
      top:0;
        */
   }
-
+  .carousel-item img{
+    display: block;
+    height: auto;
+    width: 100%;
+  } 
    .button{
        background-color: #ffff00;
        border: none;
@@ -49,9 +58,8 @@ body{
       background-position: center center;
       background-attachment: fixed;
       background-size: cover;
-   /*   position: fixed; 
-     */overflow: hidden; 
+  /*   position: fixed; */
+     overflow: hidden; 
      width: 100%;
-     padding: 0;
-   
+    padding: 0;
     }
