--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body{
   /*.carousel,.item,.active{ 
     height:100%;}*/
   .carousel-inner{
-    width: 100%;
-    height: 100%;}
+    max-width: 100%;
+    height: auto !important;
+    }
   .carousel-item {
       height: 100vh;
       min-height: 350px;
@@ -53,7 +54,7 @@ body{
         text-decoration: none;
     }
     
-    .container{
+    .container-lg{
       background-repeat: no-repeat;
       background-position: center center;
       background-attachment: fixed;
@@ -62,4 +63,5 @@ body{
      overflow: hidden; 
      width: 100%;
     padding: 0;
+   
     }
