--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body{
     width: 100%;
   } 
    .button{
-       background-color: #ffff00;
-       border: none;
+       border-color: #ff073a !important ;
+       border: ridge;
        color: black;
        padding: 15px 32px;
        text-align: center;
