--- a/style.css
+++ b/style.css
@@ -31,9 +31,10 @@ body{
     width: 100%;
   } 
    .button{
-       border-color: #ff073a !important ;
-       border: ridge;
-       color: black;
+    /*   border-color: #fff !important ;
+     */ 
+        border: none;
+       color: white;
        padding: 15px 32px;
        text-align: center;
        font-size: 16px;
@@ -43,6 +44,7 @@ body{
    
    .button:hover{
        background-color:#ff073a;
+       color: black;
    }
    .link:hover{
     color: #ff073a !important;
@@ -65,3 +67,8 @@ body{
     padding: 0;
    
     }
+    .link{
+      color: white;
+    }
+    
+   
