--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
   padding: 0;
     height: 100%;
     width: 100%;
+    background-color: black;
     }
   /*.carousel,.item,.active{ 
     height:100%;}*/
@@ -50,7 +51,7 @@ body{
    }
    
    .button:hover{
-       background-color:#ff073a;
+       background-color:#ff073a !important;
        color: black;
    }
    .link:hover{
