--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{ 
+body,html{ 
   margin: 0;
   padding: 0;
     height: 100%;
@@ -10,8 +10,14 @@ body{
     max-width: 100%;
     height: auto !important;
     }
+    #c1{
+      background-image: url('https://cdn.mos.cms.futurecdn.net/cKaSHypMx9DKTTEhk4cL7e.jpg');
+    }
+    #c2{
+      background-image: url('https://i.pinimg.com/originals/62/b7/2d/62b72d8c3d2fe65ceee31276dc9f442f.png');
+    }
   .carousel-item {
-    height: 100vh; 
+    height: 120vh; 
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -20,6 +26,17 @@ body{
      width: 100%;
      top:0;
        */
+  }
+  @media only screen and (max-width: 400px) {
+    .carousel-item{
+      height: 70vh !important;
+    }
+  }
+
+  @media only screen and (min-width: 401px) and (max-width:600px) {
+    .carousel-item{
+      height: 90vh !important;
+    }
   }
 
 .modal{
